# Esp32c3TimeRelay

./: .env.example  .gitignore  Cargo.toml  Readme.md  wokwi.toml
src/: main.rs
src/network/wifi/: mod.rs
src/schedule/: mod.rs
src/time/remote/: mod.rs
