[package]
name = "esp32c3-time-relay"
version = "0.1.0"
edition = "2021"
resolver = "2"

[[bin]]
name = "esp32c3-time-relay"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug     = true
opt-level = "z"

[dependencies]
anyhow       = "=1.0.95"
embedded-svc = "=0.28.1"
esp-idf-svc  = "=0.50.1"
serde = { version = "1.0.226", features = ["derive"]}
serde_json = "1.0.145"
chrono = "0.4.41"
dotenv_codegen = "0.15"
uuid = { version = "1.18.1", features = ["v4"] }
log = "0.4.28"

[build-dependencies]
embuild  = "=0.33.0"
